--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Orkhan-1/Full-Course-GraphQL#readme",
   "dependencies": {
     "apollo-server": "^3.13.0",
-    "graphql": "^16.11.0"
+    "graphql": "^16.11.0",
+    "mysql2": "^3.14.5"
   }
 }
